# BaseCppHWnet

VSmeetingHW/: VSmeetingHW.cpp  VSmeetingHW.sln  VSmeetingHW.vcxproj  in.txt
accountBalanceHW2.2/: accountBalanceHW2.2.cpp  accountBalanceHW2.2.sln  accountBalanceHW2.2.vcxproj
classHWcalculator3.1/: classHWcalculator3.1.cpp  classHWcalculator3.1.sln  classHWcalculator3.1.vcxproj
classHWcounter3.2/: classHWcounter3.2.cpp  classHWcounter3.2.sln  classHWcounter3.2.vcxproj
classHierarchyHW6.3/: classHierarchyHW6.3.sln  classHierarchyHW6.3.vcxproj
complicatedProjectHW10.2/: CMakeLists.txt
constructExpHW8.2/: EquilateralTriangle.cpp  ExcClass.cpp  ExcClass.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  Parallelogram.cpp  Quadrangle.cpp  Quadrangle.h  RectangleF.cpp  Rhomb.cpp  RightTriangle.cpp  Square.cpp  Triangle.cpp  Triangle.h  constructExpHW8.2.cpp  constructExpHW8.2.sln  constructExpHW8.2.vcxproj
figureNumberOfSizeHW5.1/: figureNumberOfSizeHW5.1.cpp  figureNumberOfSizeHW5.1.sln  figureNumberOfSizeHW5.1.vcxproj
figuresMethodsHW5.3/: figuresMethodsHW5.3.cpp  figuresMethodsHW5.3.sln  figuresMethodsHW5.3.vcxproj
figuresSidesOfTrianglesHW5.2/: figuresSidesOfTrianglesHW5.2.cpp  figuresSidesOfTrianglesHW5.2.sln  figuresSidesOfTrianglesHW5.2.vcxproj
fractionComparisonHW9.1/: fractionComparisonHW9.1.cpp  fractionComparisonHW9.1.sln  fractionComparisonHW9.1.vcxproj
macrosSubHW7.2/: macrosSubHW7.2.cpp  macrosSubHW7.2.sln  macrosSubHW7.2.vcxproj
mathFunctionsHW6.1/: mFunction.cpp  mFunctions.h  mathFunctionsHW6.1.cpp  mathFunctionsHW6.1.sln  (+1 more)
(+41 files in other folders)
