cmake_minimum_required(VERSION 3.22.0)
project(homeWork10.2)

add_executable(compProject10.1 complicatedProjectHW10.2.cpp 
EquilateralTriangle.cpp 
Figure.cpp 
IsoscelesTriangle.cpp 
Parallelogram.cpp 
Quadrangle.cpp 
RectangleF.cpp 
RectangleF.cpp 
Rhomb.cpp 
RightTriangle.cpp 
Square.cpp 
Triangle.cpp)